# ipmsg-rs

./: .gitignore  Cargo.toml  README.md  build.rs
config/: log4rs.yaml
migrations/2024-09-23-140701_create_init_table/: down.sql  up.sql
src/: app.rs  chat_box.rs  chat_window.glade  chat_window.rs  constant.rs  demons.rs  download.rs  file.rs  fileserver.rs  gtktest.glade  lib.rs  main.rs  main_win.rs  manager_win.rs  message.rs  model.rs  ui_util.rs  util.rs
src/constants/: protocol.rs
src/core/: download.rs  fileserver.rs  mod.rs
src/events/: mod.rs  model.rs  ui.rs
src/front/: mod.rs  ui_worker.rs
src/models/: event.rs  message.rs  mod.rs  model.rs
src/store/: logic.rs  mod.rs  models.rs  schema.rs
src/ui/: chat_window.rs  chat_window.ui  main_win.rs  mod.rs
ui/: app.slint  appwindow.slint  chat_window.slint  global.slint  tool_bar.slint  user_list.slint
ui/views/: chat_window.slint  index.slint  no_message.slint  tool_bar.slint  user_list.slint
