[package]
name = "ipmsg-rs"
version = "0.7.1"
authors = ["wangyanqing@langzi.me"]
description = "ipmsg rewrite by rust."
repository = "https://github.com/langzime/raudient"
documentation = "https://docs.rs/raudient"
keywords = ["ipmsg", "ipmessager", "ipmsg-rs"]
license = "MIT"
edition = "2021"

[[bin]]
name = "ipmsg-rs"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
hostname = "0.3"
encoding = "0.2"
#lazy_static = "1"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
thiserror = "1.0"
crossbeam-channel = "0.5"
combine = "4"
once_cell="1.19"
gdk-pixbuf = "0.18"
human-panic = "1.1.0"
local-ip-address = "0.5"

adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }

[dependencies.gtk]
version = "0.7"
package = "gtk4"
features = ["v4_8"]

[dependencies.gdk]
version = "0.7"
package = "gdk4"

[dependencies.gio]
version = "0.18"
features = ["v2_70"]

[dependencies.glib]
version = "0.18"
features = ["v2_70"]

#[dependencies.gettext-rs]
#version = "0.7"
#features = ["gettext-system"]

[dependencies.pango]
version = "0.18"
features = ["v1_50"]

