[package]
name = "ipmsg-rs"
version = "0.7.1"
authors = ["wangyanqing@langzi.me"]
description = "ipmsg rewrite by rust."
repository = "https://github.com/langzime/raudient"
documentation = "https://docs.rs/raudient"
keywords = ["ipmsg", "ipmessager", "ipmsg-rs"]
license = "MIT"
edition = "2021"

[[bin]]
name = "ipmsg-rs"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
hostname = "0.3"
encoding = "0.2"
#lazy_static = "1"
log = "0.4"
anyhow = "1"
thiserror = "1.0"
crossbeam-channel = "0.5"
combine = "4"
once_cell="1.19"
human-panic = "1.1.0"
local-ip-address = "0.5"
slint = {version="1.3.2", features = ["serde"]}
rfd = "0.13.0"
#image = { version = "0.24.0", default-features = false, features = [ "jpeg" ] }
image = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
log4rs = "1.3.0"


[build-dependencies]
slint-build = "1.0"
