[package]
name = "ipmsg-rs"
version = "0.7.1"
authors = ["wangyanqing@langzi.me"]
description = "ipmsg rewrite by rust."
repository = "https://github.com/langzime/raudient"
documentation = "https://docs.rs/raudient"
keywords = ["ipmsg", "ipmessager", "ipmsg-rs"]
license = "MIT"
edition = "2021"

[[bin]]
name = "ipmsg-rs"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
hostname = "0.4"
encoding = "0.2"
log = "0.4"
anyhow = "1"
thiserror = "1.0"
crossbeam-channel = "0.5"
combine = "4"
once_cell="1.19"
human-panic = "2.0"
local-ip-address = "0.6"
slint = {version="1.8.0", features = ["serde"]}
rfd = "0.15.0"
#image = { version = "0.24.0", default-features = false, features = [ "jpeg" ] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
log4rs = "1.3.0"
diesel = { version = "2.2.4", features = ["sqlite", "chrono", "r2d2", "returning_clauses_for_sqlite_3_35"] }
dirs = "5.0.1"
config = "0.14.0"
diesel_migrations = "2.2.0"
serde_yaml = "0.9"


[build-dependencies]
slint-build = "1.8.0"
